# openai-llm-gateway

./: .gitignore  Cargo.toml  README.md
scripts/: smoke.sh
scripts/bench/: no_stream_bench.sh  stream_bench.sh
scripts/test/: smoke.sh
src/: appstate.rs  main.rs  types.rs
src/inference/: worker.rs
src/routes/: healthz.rs  mod.rs
src/routes/v1/: mod.rs
src/routes/v1/chat/: completions.rs  mod.rs
