[package]
name = "openai-llm-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
